--- a/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Views/Shared/_HomeLayout.cshtml
+++ b/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Views/Shared/_HomeLayout.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-    <script src="~/js/table.js" asp-append-version="true"></script>
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -43,9 +43,9 @@
           </ul>
         </li>
       </ul>
-      <form class="d-flex mr-5" role="search">
-        <input class="form-control me-2 bg-dark text-light" style="width:400px;" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-primary" type="submit"><i class="bi bi-search"></i></button>
+      <form class="d-flex mr-5" method="get" action="/Animes/Search">
+        <input class="form-control me-2 bg-dark text-light" style="width:400px;" type="text" name="query"  placeholder="Search" aria-label="Search" id="searchInput">
+        <button class="btn btn-outline-primary" id="searchButton" type="submit" title="searchBtn"><i class="bi bi-search"></i></button>
       </form>
 
       <partial name="_LoginPartial" />
@@ -60,9 +60,11 @@
             @RenderBody()
         </main>
     </div>
-
+    <script src="~/js/index.js" asp-append-version="true"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    
+     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
