--- a/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Areas/Admin/Views/Animes/Create.cshtml
+++ b/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Areas/Admin/Views/Animes/Create.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post" asp-controller="Animes" asp-action="Create">
+        <form method="post" asp-controller="Animes" asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="AnimeName" class="control-label"></label>
@@ -28,10 +28,13 @@
                 <input asp-for="AnimeStudio" class="form-control" />
                 <span asp-validation-for="AnimeStudio" class="text-danger"></span>
             </div>
-
+            <div class="input-group mb-3">
+                <input asp-for="Image" type="file" class="form-control" name="image">
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
+            
         </form>
     </div>
 </div>
