--- a/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Areas/Admin/Views/Episodes/Create.cshtml
+++ b/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Areas/Admin/Views/Episodes/Create.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="EpisodeNumber" class="control-label"></label>
@@ -23,11 +23,15 @@
                 <input asp-for="EpisodeTitle" class="form-control" />
                 <span asp-validation-for="EpisodeTitle" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="EpisodeUrl" class="control-label"></label>
-                <input asp-for="EpisodeUrl" class="form-control" />
-                <span asp-validation-for="EpisodeUrl" class="text-danger"></span>
+            
+
+
+            <div class="input-group mb-3">
+                <input asp-for="EpisodeUrl" type="file" class="form-control" name="video">
             </div>
+
+
+
             <div class="form-group">
                 <label asp-for="AnimeId" class="control-label"></label>
                 <select asp-for="AnimeId" class ="form-control" asp-items="ViewBag.AnimeId"></select>
